Implemented web layer for backend with proper translation logic & openapi integration
